--- a/data/faq.html
+++ b/data/faq.html
@@ -1011,7 +1011,7 @@ database.</dd>
 <b><em>Ключевое слово</em></b>. Наиболее популярные категории представлены в окне поиска, но можно 
 ввести в строку поиска и другие ключевые слова. Например: кемпинг или водопад.
 <p></p>
-<b><em>Координаты</em></b>: введите или скопируйте в строку поиска координаты в десятичном (43.9775, 15.3854) или DMS (43°58′38″N 15°23′07.44″E).
+<b><em>Координаты</em></b>: введите или скопируйте в строку поиска координаты в десятичном (43.9775, 15.3854) или DMS (43°58′38″N 15°23′07.44″E) формате.
 <p></p>
 <b><em>Эмодзи</em></b> ☕️
 <p></p>
