--- a/data/faq.html
+++ b/data/faq.html
@@ -833,7 +833,7 @@ off.
 If you are an Android user and the option is disabled, please check system <a href="https://support.maps.me/hc/en-us/articles/208628985">TTS
 settings</a>: open device's settings –> Language and input –> Speech –> Text-to-speech output. If you don't see the settings, make sure you have TTS installed on your device. If you disabled TTS engine via Android settings, make sure to enable it first.</dd>
 <dd lang="ru">Обратите внимание: голосовые подсказки доступны для автомобильных и велосипедных 
-маршрутов. Сейчас, подсказки озвучиваются только во время движения.
+маршрутов. Сейчас подсказки озвучиваются только во время движения.
 <p></p>
 Если подсказки не слышно:
 <p></p>
@@ -1011,13 +1011,14 @@ database.</dd>
 <b><em>Ключевое слово</em></b>. Наиболее популярные категории представлены в окне поиска, но можно 
 ввести в строку поиска и другие ключевые слова. Например: кемпинг или водопад.
 <p></p>
-<b><em>Координаты</em></b>: введите или скопируйте в строку поиска координаты в десятичном (43.9775, 15.3854) или DMS (43°58′38″N 15°23′07.44″E) формате.
+<b><em>Координаты</em></b>: введите или скопируйте в строку поиска координаты в десятичном формате 
+(43.9775, 15.3854) или в формате DMS (43°58′38″N 15°23′07.44″E).
 <p></p>
 <b><em>Эмодзи</em></b> ☕️
 <p></p>
 Можно выбрать объект из результатов поиска или нажать “Посмотреть на карте”, чтобы отобразить все 
 доступные результаты на карте. Пожалуйста, учитывайте, что поиск будет более точным, если вы откроете место, в котором ищете, на 
-экране или укажете город (страну) в поиске.
+экране, или укажете город (страну) в поиске.
 <p></p>
 Обратите внимание: места найдутся только если они есть в данных <a href="http://www.openstreetmap.org">OpenStreetMap</a>.</dd>
 <dd lang="de">Laden Sie zuerst die Landes- oder Regionskarte herunter. Tippen Sie auf die die
