--- a/data/faq.html
+++ b/data/faq.html
@@ -656,34 +656,20 @@ mi posición.</dt>
 <dd lang="en">Check your Geolocation Settings and make sure that Google Play Services are not
 blocked. We use these to determine your location, but they may be blocked by some antivirus
 services, so check these settings too. Try to enable (disable if enabled) “Use Google Play Services”
-in app settings, then restart your device.</dd>
+in the app settings.</dd>
 <dd lang="ru">Если настройки геолокации в порядке, убедитесь, что службы Google Play не заблокированы
 другими приложениями или антивирусами: они нужны для более эффективного определения позиции.
 Попробуйте поставить (или убрать, если стоит) галочку “Использовать сервисы Google” в настройках
-приложения. На разных устройствах эта опция может давать положительный или отрицательный эффект.
-Не забудьте после этого перезагрузить устройство.</dd>
+приложения. На разных устройствах эта опция может давать положительный или отрицательный эффект.</dd>
 <dd lang="de">Prüfen Sie Ihre Ortungseinstellungen und stellen Sie sicher, dass Google Play
 Services nicht blockiert. Wir verwenden diese zur Bestimmung Ihres Standorts, sie könnten jedoch
 von Antivirus-Diensten blockiert sein, überprüfen Sie daher auch diese Einstellungen. Versuchen
-Sie „Google Play Services“ in den App-Einstellungen zu aktivieren (deaktivieren, falls aktiviert)
-und starten Sie das Gerät neu.</dd>
+Sie "Google Play Services“ in den App-Einstellungen zu aktivieren (deaktivieren, falls aktiviert).</dd>
 <dd lang="es">Asegúrate de que Servicios de Google Play no estén bloqueados en la configuración
 de geolocalización. Utilizamos estos servicios para establecer tu posición, pero puede que los
 haya bloqueado algún servicio antivirus, por lo que comprueba también estos ajustes. Prueba
-a habilitar (o a deshabilitar si ya está habilitado) «Usar Servicios de Google Play» en los
-ajustes de la aplicación y, a continuación, reinicia el dispositivo.</dd>
-
-<dt lang="en">How can I see my current speed and altitude?</dt>
-<dt lang="ru">Как посмотреть мою текущую скорость и высоту над уровнем моря?</dt>
-<dt lang="de">Wo kann ich meine aktuelle Geschwindigkeit und Höhe ablesen?</dt>
-<dt lang="es">¿Cómo consulto la velocidad a la que voy y la altitud a la que me encuentro?</dt>
-<dd lang="en">Make sure that you get GPS signal and then select your current position on the
-map.</dd>
-<dd lang="ru">Когда позиция определилась с помощью GPS-спутников (не по Wi-Fi или сотовой сети),
-выберите ваше текущее местоположение на карте.</dd>
-<dd lang="de">Stellen Sie sicher, dass Sie ein GPS-Signal empfangen und wählen Sie Ihre aktuelle
-Position auf der Karte.</dd>
-<dd lang="es">Comprueba que captas una señal de GPS y selecciona tu posición en el mapa.</dd>
+a habilitar (o a deshabilitar si ya está habilitado) "Usar Servicios de Google Play" en los
+ajustes de la aplicación y.</dd>
 
 <dt lang="en">What does the auto-follow mode stand for and how can I activate it?</dt>
 <dt lang="ru">Что такое режим автоследования и как мне его активировать?</dt>
@@ -880,7 +866,7 @@ etc. Utiliza el sentido común antes que cualquier software.</dd>
 <dt lang="de">Kann ich in MAPS.ME Tracks im GPX-Format aufzeichnen?</dt>
 <dt lang="es">¿Permite MAPS.ME grabar itinerarios en formato GPX?</dt>
 <dd lang="en">Not yet. So far, you can use "Recent track" option (app's settings – Map – Recent track).
-It allows you to record travelled path for a ceratin period and see it on the map. You can also
+It allows you to record traveled path for a certain period and see it on the map. You can also
 <a href="http://gpx2kml.com">convert GPX to KML</a> or KMZ and <a href="https://support.maps.me/hc/en-us/articles/207895029-How-can-I-import-bookmarks-">import
 tracks and bookmarks</a> in KML or KMZ format.</dd>
 <dd lang="ru">Пока можно использовать опцию "Недавно пройденный путь" (настройки приложения
