[android] Added Glide and JCIP libraries in copyright list

--- a/data/copyright.html
+++ b/data/copyright.html
@@ -140,6 +140,10 @@
     <li><a href="http://www.freetype.org">FreeType</a><br>
       &copy; 2013 The FreeType Project; <a href="#freetype-license" class="license">FTL</a></li>
 
+    <Li><a href="https://github.com/bumptech/glide">Glide</a><br>
+      &copy; 2014 Google Inc.; <a href="#bsd3-license" class="license">BSD License;</a> <a href="#mit-license" class="license">MIT License;</a>
+      <a href="#apache2-license" class="license">Apache License</a></li>
+
     <li><a href="http://www.fribidi.org/">GNU FriBidi</a><br>
       &copy; Behdad Esfahbod, Dov Grobgeld, Roozbeh Pournader; <a href="#lgpl21-license" class="license">LGPL</a></li>
 
@@ -148,6 +152,9 @@
 
     <li><a href="http://www.digip.org/jansson/">Jansson</a><br>
       &copy; 2009-2013 Petri Lehtinen; <a href="#mit-license" class="license">MIT License</a></li>
+
+    <li><a href="http://jcip.net/annotations/doc/net/jcip/annotations/package-summary.html">JCIP annotations</a><br>
+      &copy; 2005 Brian Goetz and Tim Peierls; <a href="#apache2-license" class="license">Apache License</a></li>
 
     <li><a href="http://libkdtree.alioth.debian.org/">libkdtree++</a><br>
       &copy; 2004-2007 Martin F. Krafft, parts are &copy; 2004-2008 Paul Harris and &copy; 2007-2008 Sylvain Bougerel; <a href="#artistic-license" class="license">Artistic License</a></li>
