Edit FAQ - add <wbr> tags to paths for no horizontall scroll

--- a/data/faq.html
+++ b/data/faq.html
@@ -1721,7 +1721,7 @@ Open the app’s settings – Map – Maps storage – select SD card.</p>
 <p><li>if you moved the app itself to SD via Android settings, move it back to the device storage
 </p></li>
 
-<p><li>create the folder on SD card <b>Android/data/com.mapswithme.maps.pro/files/MapsWithMe</b> 
+<p><li>create the folder on SD card <b>Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe</b> 
 and check if you have Maps Storage in the app's settings</p></li>
 
 <p><li>if you use Android 6.0 or newer and mounted SD card as internal storage, mount it as portable
@@ -1748,7 +1748,7 @@ us a log file with the description of a problem.</p></dd>
 верните его назад в память устройства</li></p>
 
 <p><li>вручную создайте следующий путь на SD карте (если он отсутствует): 
-Android/data/com.mapswithme.maps.pro/files/MapsWithMe и проверьте появилась ли вкладка</li></p>
+Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe и проверьте появилась ли вкладка</li></p>
 
 <p><li>если у вас Android 6 или новее и вы подключили SD карту в качестве внутреннего накопителя,
 подключите ее снова в качестве съемного накопителя</li></p>
@@ -1785,7 +1785,7 @@ dispositivo</li></p>
 <p><li>si has movido la aplicación a la SD a través de los ajustes de Android, vuelve a enviarla al 
 almacenamiento del dispositivo</li></p>
 
-<p><li>crea en una tarjeta SD la carpeta <b>Android/data/com.mapswithme.maps.pro/files/
+<p><li>crea en una tarjeta SD la carpeta <b>Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>files/<wbr>
 MapsWithMe</b> y verifica si tienes el Almacenamiento de mapas en los ajustes de 
 la aplicación</li></p>
 
