[icu] Copyright for libICU

--- a/data/copyright.html
+++ b/data/copyright.html
@@ -150,6 +150,9 @@
     <li><a href="http://www.g-truc.net/project-0016.html">GLM</a><br>
       &copy; 2005&ndash;2014 G-Truc Creation; <a href="#mit-license" class="license">MIT License</a></li>
 
+    <li><a href="http://site.icu-project.org/">ICU</a><br>
+      &copy; 1995&ndash;2016 IBM Corporation and others; <a href="#icu-license" class="license">ICU License</a></li>
+
     <li><a href="http://www.digip.org/jansson/">Jansson</a><br>
       &copy; 2009-2013 Petri Lehtinen; <a href="#mit-license" class="license">MIT License</a></li>
 
@@ -378,6 +381,38 @@
     shall not be used in advertising or otherwise to promote the sale, use or
     other dealings in this Software without prior written authorization from
     Silicon Graphics, Inc.</p>
+</div>
+
+<div class="section">
+  <h2 id="icu-license">ICU License</h2>
+
+  <p>Permission is hereby granted, free of charge, to any person obtaining
+a copy of this software and associated documentation files (the
+"Software"), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish,
+distribute, and/or sell copies of the Software, and to permit persons
+to whom the Software is furnished to do so, provided that the above
+copyright notice(s) and this permission notice appear in all copies of
+the Software and that both the above copyright notice(s) and this
+permission notice appear in supporting documentation.</p>
+
+  <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
+OF THIRD PARTY RIGHTS. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
+HOLDERS INCLUDED IN THIS NOTICE BE LIABLE FOR ANY CLAIM, OR ANY
+SPECIAL INDIRECT OR CONSEQUENTIAL DAMAGES, OR ANY DAMAGES WHATSOEVER
+RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF
+CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN
+      CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.</p>
+
+      <p>Except as contained in this notice, the name of a copyright holder
+shall not be used in advertising or otherwise to promote the sale, use
+or other dealings in this Software without prior written authorization
+of the copyright holder.</p>
+
+      <p>All trademarks and registered trademarks mentioned herein are the
+      property of their respective owners.</p>
 </div>
 
 <div class="section">
