Corrected typo in the FAQ

--- a/data/faq.html
+++ b/data/faq.html
@@ -272,7 +272,7 @@ lors de la prochaine mise à jour.</p></dd>
 <dt lang="es">¿Cómo se descargan mapas actualizados y se eliminan mapas antiguos?</dt>
 <dt lang="fr">Comment télécharger une mise à jour ou supprimer une ancienne carte ?</dt>
 
-<dd lang="en"><p>Tao the menu button in the right lower corner –> Download Maps –> Downloaded.
+<dd lang="en"><p>Tap the menu button in the right lower corner –> Download Maps –> Downloaded.
 Here you can see a list of all the maps you have downloaded, update maps, go to the whole country
 map, as well as delete unnecessary maps. You can update each map file separately or all of them at
 once. We update the OpenStreetMap data in our app with almost every new release.</p></dd>
