minor changes and improvemnets

--- a/data/faq.html
+++ b/data/faq.html
@@ -336,32 +336,35 @@ le niveau de détaille sur <a href="http://www.openstreetmap.org/" class="link">
 <dt lang="es">¿Dónde almacena MAPS.ME los mapas descargados y mis marcadores?</dt>
 <dt lang="fr">Où MAPS.ME stocke les cartes téléchargés les signets ?</dt>
 
-<dd lang="en"><p>On iOS, you can access all files with iTunes (select your device, then Apps and
-scroll down). On Android, files are stored in the MapsWithMe folder or in Android/<wbr>data/<wbr>
-com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe
-folder if you are using SD-card and have Android 4.4 or newer.</p></dd>
+<dd lang="en"><p><b>On Android</b>, files are stored in the MapsWithMe folder or in Android/<wbr>
+data/<wbr> com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe folder if you are using SD-card and 
+have Android 4.4 or newer.</p>
+<p><b>On iOS</b>, you can access all files with iTunes (select your device, 
+then Apps and scroll down).</p></dd>
 
-<dd lang="ru"><p>Под iOS файлы можно найти с помощью iTunes, выбрав ваше устройство, затем Приложения,
-и прокрутив страницу вниз. Под Андроид файлы лежат либо в папке MapsWithMe, либо в Android/<wbr>
+<dd lang="ru"><p>В <b>Android</b> файлы лежат либо в папке MapsWithMe, либо в Android/<wbr>
 data/<wbr>com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe,
-если вы храните файлы на SD-карточке и у вас Андроид 4.4 или новее.</p></dd>
+если вы храните файлы на SD-карточке и у вас Андроид 4.4 или новее.</p>
+<p>В <b>iOS</b> файлы можно найти с помощью iTunes, выбрав ваше устройство, затем Приложения,
+и прокрутив страницу вниз.</p></dd>
 
 <dd lang="de"><p>Unter iOs haben Sie über iTunes Zugriff auf alle Dateien (wählen Sie Ihr Gerät,
 dann Apps und nach unten scrollen). Unter Android werden die Dateien im Ordner MapsWithMe oder
 im Ordner Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe, wenn Sie
 eine SD-Karte mit Android 4.4 oder höher verwenden.</p></dd>
 
-<dd lang="es"><p>En iOS, puedes acceder a todos los archivos mediante iTunes. (Selecciona el dispositivo;
-a continuación, selecciona «Aplicaciones» y desplázate hacia abajo). En Android, los archivos
+<dd lang="es"><p>En <b>Android</b>, los archivos
 se almacenan en la carpeta «MapsWithMe» o en la carpeta «Android/<wbr>data/<wbr>
 com.mapswithme.maps.pro/<wbr>files/<wbr>MapsWithMe»,
-si utilizas una tarjeta SD y tienes Android 4.4 o una versión posterior.</p></dd>
+si utilizas una tarjeta SD y tienes Android 4.4 o una versión posterior.</p>
+<p>En <b>iOS</b>, puedes acceder a todos los archivos mediante iTunes. (Selecciona el dispositivo;
+a continuación, selecciona «Aplicaciones» y desplázate hacia abajo).</p></dd>
 
-<dd lang="fr"><p>Sous iOS, vous pouvez accéder à tous vos fichiers avec iTunes
-(sélectionner son appareil, vos application et scroller en bas). Sous Android,
-les fichiers sont stockées dans le dossier MapsWithMe ou dans le fichier
-Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>dossier/<wbr>MapsWithMe si vous
-utilisez une carte SD et utilisez Android 4.4 ou plus récent.</p></dd>
+<dd lang="fr"><p>Sous Android, les fichiers sont stockées dans le dossier MapsWithMe ou dans le 
+fichier Android/<wbr>data/<wbr>com.mapswithme.maps.pro/<wbr>dossier/<wbr>MapsWithMe si vous
+utilisez une carte SD et utilisez Android 4.4 ou plus récent.</p>
+<p>Sous <b>iOS</b>, vous pouvez accéder à tous vos fichiers avec iTunes (sélectionner son appareil, vos 
+application et scroller en bas).</p></dd>
 
 </dl>
 
@@ -2013,11 +2016,97 @@ envoyer nous :</p>
 <li>la version de MAPS.ME</li>
 <li>Le modèle de l'appareil et la version du système d'exploitation (Android ou iOS).</p></li></dd>
 
-<dt lang="en">I cannot install MAPS.ME from AppStore or Android Market.</dt>
-<dt lang="ru">Карты не устанавливаются из магазина приложений.</dt>
-<dt lang="de">Ich kann MAPS.ME nicht vom AppStore oder von Android Market installieren.</dt>
-<dt lang="es">No puedo instalar MAPS.ME desde el App Store o Android Market.</dt>
-<dt lang="fr">Je n'arrive pas à installer MAPS.ME depuis AppStore ou Android Market.</dt>
+<dt lang="en">I can't download maps! It always fails.</dt>
+<dt lang="ru">Не получается загрузить карты – все время выдает ошибку.</dt>
+<dt lang="de">Ich kann keine Karten herunterladen! Es tritt immer ein Fehler auf.</dt>
+<dt lang="es">No puedo descargar mapas. Da error constantemente.</dt>
+<dt lang="fr">Je ne peux pas télécharger la carte, une erreur permanente.</dt>
+
+<dd lang="en"><p>Your download can fail due to a temporary network error or specific network
+provider/router settings. Please try again later or use a different Wi-Fi access point.
+In addition, make sure, that you have enough free space to download maps.</p>
+
+<p>If you have Android 6 or higher, please make sure that you granted storage permission for 
+MAPS.ME (usually, it enabled by default) in your device settings – Apps – MAPS.ME – Permissions – 
+Storage.</p>
+
+<p>If you have a slow internet connection, you can
+<a href="http://direct.mapswithme.com/direct/latest/" class="link">download maps</a>
+directly via PC and then transfer them to the MAPS.ME folder on your device. On Android maps
+(.mwm files) are stored at MapsWithMe folder. On iOS, you need to connect your device to
+a computer and copy maps via iTunes (select your device, then Apps – scroll down the page, select
+MAPS.ME and copy maps to Documents section). Don’t forget to restart your device. Please note,
+that even the latest maps will be marked as outdated if you download them via PC.</p></dd>
+
+<dd lang="ru"><p>Причиной может быть временная проблема с сетью, либо специфические настройки
+интернет-провайдера<sup><a href="#rlink">[*]</a></sup> или роутера. Пожалуйста, попробуйте еще раз 
+через некоторое время, или подключитесь к другой точке Wi-Fi. Дополнительно, убедитесь, что на 
+устройстве достаточно свободного места для загрузки и хранения карт.</p>
+
+<p>Если у вас Android 6 или новее, пожалуйста, убедитесь, что приложению разрешен доступ к памяти 
+устройства, откройте настройки Android – Приложения – Все – MAPS.ME – Разрешения – Память.</p>
+
+<p>Вы также можете <a href="http://direct.mapswithme.com/direct/latest/">скачать карты</a> напрямую
+через компьютер. Скачанные файлы (.mwm) переместите в папку MapsWithMe (Android) подключив устройство
+к компьютеру. На iOS устройство файлы можно скопировать с помощью iTunes, выбрав ваше устройство,
+затем Приложения – прокрутите страницу вниз и выберите MAPS.ME. Не забудьте перезагрузить устройство.
+Обратите внимание, что даже самые свежие карты, скачанные напрямую, будут отображаться в приложении
+как неактуальные.</p>
+
+<p id="rlink">Пользователи из Украины, в случае блокировок со стороны провайдера, могут 
+воспользоваться VPN, например, ZenMate VPN (версия для <a href="https://play.google.com/store/apps/details?id=com.zenmate.android">Android</a> и для 
+<a href="https://itunes.apple.com/us/app/zenmate-vpn/id903380113?mt=8">iOS</a>).</p></dd>
+
+<dd lang="de">Ihr Download kann aufgrund eines temporären Netzwerkfehlers oder bestimmter
+Netzwerkanbieter-/Routereinstellungen fehlschlagen. Bitte versuchen Sie es später noch einmal oder
+verwenden Sie einen anderen WLAN-Access Point.
+
+<p>Haben Sie eine langsame Internetverbindung, können Sie die Karten direkt über den PC
+<a href="http://direct.mapswithme.com/direct/latest/">herunterladen</a>
+und übertragen Sie dann zum MAPS.ME-Ordner auf Ihrem Gerät. Unter Android werden die Karten
+(.mwm-Dateien) im Ordner MapsWithMe gespeichert. Unter iOS müssen Sie Ihr Gerät mit einem Computer
+verbinden und kopieren die Karten über iTunes (wählen Sie Ihr Gerät aus, dann Apps – MAPS.ME
+– Dokumente). Ihr Gerät muss danach neu gestartet werden. Bitte beachten Sie, dass sogar die
+neuesten Karten als veraltet markiert werden, wenn Sie diese über den PC herunterladen.</p></dd>
+
+<dd lang="es"><p>El error de la descarga puede deberse a un fallo temporal de la red o a ajustes
+específicos del proveedor de la red o del rúter. Inténtalo de nuevo más tarde o utiliza otro
+punto de acceso mediante wifi.</p>
+
+<p>Si tienes Android 6 o posterior, verifica por favor que se ha concedido un permiso para acceder 
+la memoria para MAPS.ME (usualmente, está habilitado de forma predeterminada) en los ajustes de 
+tu dispositivo - Aplicaciones - MAPS.ME - Permisos - Almacenamiento.</p>
+
+<p>Si tu conexión a internet no es muy rápida, puedes
+<a href="http://direct.mapswithme.com/direct/latest/">descargar mapas</a> directamente a un PC y
+transferirlos posteriormente a la carpeta de MAPS.ME de tu dispositivo. En Android, los mapas se
+almacenan en la carpeta «MapsWithMe» (como archivos .mwm). En iOS, debes conectar el dispositivo a
+un ordenador y copiar los mapas mediante iTunes. (Selecciona el dispositivo y, a continuación,
+«Aplicaciones» – «MAPS.ME» – «Documentos»). No olvides reiniciar el dispositivo. Ten en cuenta que
+incluso los mapas más recientes se marcarán como obsoletos si los descargas utilizando un
+PC.</p></dd>
+
+<dd lang="fr"><p>Votre téléchargement peut échouer suite à un problème de réseau temporaire ou 
+de paramêtre de réseau
+spécifique du fournisseur/routeur. Merci de réessayer plus tard ou d'utiliser un point d'accès wifi 
+différent. En complément, assurez vous d'avoir suffisamment d'espace disponible pour télécharger 
+les cartes.</p>
+
+<p>Si vous avez une connexion internet lente, vous pouvez
+<a href="http://direct.mapswithme.com/direct/latest/" class="link">télécharger
+les cartes</a> directement sur votre ordinateur puis les transférer vers le dossier MAPS.ME de
+votre appareil. Sur Android, les cartes (.mwm files) sont stockées dans le dossier MapsWithMe.
+Sur iOS, vous devez connecter votre appareil à l'ordinateur et copier la carte via iTunes
+(sélectionner votre appareil, vos applications – scroller en bas de page, sélectionner MAPS.ME et
+copier la section documents). N'oubliez pas de redémarrer votre appareil. Merci de noter, que même
+les cartes les plus récentes seront marquées comme obsolète si vous les téléchargées via
+le PC.</p></dd>
+
+<dt lang="en">I cannot install MAPS.ME from Google Play or App Store.</dt>
+<dt lang="ru">Карты не устанавливаются из Google Play или App Store.</dt>
+<dt lang="de">Ich kann MAPS.ME nicht vom Google Play oder von App Store installieren.</dt>
+<dt lang="es">No puedo instalar MAPS.ME desde el Google Play o App Store.</dt>
+<dt lang="fr">Je n'arrive pas à installer MAPS.ME depuis Google Play ou App Store.</dt>
 
 <dd lang="en"><p>Restart your device and try to install the app again. If that doesn’t help and
 you have an Android device, follow these instructions:</p>
@@ -2086,76 +2175,6 @@ et que vous avez un appareil Android, suivez ces instructions :<p>
 
 <p>Android peuvent aussi télécharger MAPS.ME (apk fichier) directement
 depuis <a href="https://maps.me/apk/">notre site web</a>.</p></dd>
-
-<dt lang="en">I can't download maps! It always fails.</dt>
-<dt lang="ru">Не получается загрузить карты – все время выдает ошибку.</dt>
-<dt lang="de">Ich kann keine Karten herunterladen! Es tritt immer ein Fehler auf.</dt>
-<dt lang="es">No puedo descargar mapas. Da error constantemente.</dt>
-<dt lang="fr">Je ne peux pas télécharger la carte, une erreur permanente.</dt>
-
-<dd lang="en"><p>Your download can fail due to a temporary network error or specific network
-provider/router settings. Please try again later or use a different Wi-Fi access point.
-In addition, make sure, that you have enough free space to download maps.</p>
-
-<p>If you have a slow internet connection, you can
-<a href="http://direct.mapswithme.com/direct/latest/" class="link">download maps</a>
-directly via PC and then transfer them to the MAPS.ME folder on your device. On Android maps
-(.mwm files) are stored at MapsWithMe folder. On iOS, you need to connect your device to
-a computer and copy maps via iTunes (select your device, then Apps – scroll down the page, select
-MAPS.ME and copy maps to Documents section). Don’t forget to restart your device. Please note,
-that even the latest maps will be marked as outdated if you download them via PC.</p></dd>
-
-<dd lang="ru"><p>Причиной может быть временная проблема с сетью, либо специфические настройки
-интернет-провайдера или роутера. Пожалуйста, попробуйте еще раз через некоторое время, или
-подключитесь к другой точке Wi-Fi. Дополнительно, убедитесь, что на устройстве достаточно
-свободного места для загрузки и хранения карт.</p>
-
-<p>Вы также можете <a href="http://direct.mapswithme.com/direct/latest/">скачать карты</a> напрямую
-через компьютер. Скачанные файлы (.mwm) переместите в папку MapsWithMe (Android) подключив устройство
-к компьютеру. На iOS устройство файлы можно скопировать с помощью iTunes, выбрав ваше устройство,
-затем Приложения – прокрутите страницу вниз и выберите MAPS.ME. Не забудьте перезагрузить устройство.
-Обратите внимание, что даже самые свежие карты, скачанные напрямую, будут отображаться в приложении
-как неактуальные.</p></dd>
-
-<dd lang="de">Ihr Download kann aufgrund eines temporären Netzwerkfehlers oder bestimmter
-Netzwerkanbieter-/Routereinstellungen fehlschlagen. Bitte versuchen Sie es später noch einmal oder
-verwenden Sie einen anderen WLAN-Access Point.
-
-<p>Haben Sie eine langsame Internetverbindung, können Sie die Karten direkt über den PC
-<a href="http://direct.mapswithme.com/direct/latest/">herunterladen</a>
-und übertragen Sie dann zum MAPS.ME-Ordner auf Ihrem Gerät. Unter Android werden die Karten
-(.mwm-Dateien) im Ordner MapsWithMe gespeichert. Unter iOS müssen Sie Ihr Gerät mit einem Computer
-verbinden und kopieren die Karten über iTunes (wählen Sie Ihr Gerät aus, dann Apps – MAPS.ME
-– Dokumente). Ihr Gerät muss danach neu gestartet werden. Bitte beachten Sie, dass sogar die
-neuesten Karten als veraltet markiert werden, wenn Sie diese über den PC herunterladen.</p></dd>
-
-<dd lang="es"><p>El error de la descarga puede deberse a un fallo temporal de la red o a ajustes
-específicos del proveedor de la red o del rúter. Inténtalo de nuevo más tarde o utiliza otro
-punto de acceso mediante wifi.</p>
-
-<p>Si tu conexión a internet no es muy rápida, puedes
-<a href="http://direct.mapswithme.com/direct/latest/">descargar mapas</a> directamente a un PC y
-transferirlos posteriormente a la carpeta de MAPS.ME de tu dispositivo. En Android, los mapas se
-almacenan en la carpeta «MapsWithMe» (como archivos .mwm). En iOS, debes conectar el dispositivo a
-un ordenador y copiar los mapas mediante iTunes. (Selecciona el dispositivo y, a continuación,
-«Aplicaciones» – «MAPS.ME» – «Documentos»). No olvides reiniciar el dispositivo. Ten en cuenta que
-incluso los mapas más recientes se marcarán como obsoletos si los descargas utilizando un
-PC.</p></dd>
-
-<dd lang="fr"><p>Votre téléchargement peut échouer suite à un problème de réseau temporaire ou de paramêtre de réseau
-spécifique du fournisseur/routeur.
-Merci de réessayer plus tard ou d'utiliser un point d'accès wifi différent. En complément, assurez vous d'avoir
-suffisamment d'espace disponible pour télécharger les cartes.</p>
-
-<p>Si vous avez une connexion internet lente, vous pouvez
-<a href="http://direct.mapswithme.com/direct/latest/" class="link">télécharger
-les cartes</a> directement sur votre ordinateur puis les transférer vers le dossier MAPS.ME de
-votre appareil. Sur Android, les cartes (.mwm files) sont stockées dans le dossier MapsWithMe.
-Sur iOS, vous devez connecter votre appareil à l'ordinateur et copier la carte via iTunes
-(sélectionner votre appareil, vos applications – scroller en bas de page, sélectionner MAPS.ME et
-copier la section documents). N'oubliez pas de redémarrer votre appareil. Merci de noter, que même
-les cartes les plus récentes seront marquées comme obsolète si vous les téléchargées via
-le PC.</p></dd>
 
 <dt lang="en">The app’s icon disappeared, what can I do?</dt>
 <dt lang="ru">У меня пропала иконка приложения, что делать?</dt>
@@ -2261,8 +2280,8 @@ l'utilisation d'appareil smartphone Windows.</dd>
 
 <dd lang="en">We do not have an official desktop version of MAPS.ME. For the time being we are
 not developing a desktop version. Please check in again in the future.</dd>
-<dd lang="ru">Мы официально не распространяем MAPS.ME для обычных компьютеров, возможно, мы
-вернемся к этому вопросу в будущем.</dd>
+<dd lang="ru">Официальной версии MAPS.ME для обычных компьютеров нет, возможно, мы вернемся к этому 
+вопросу в будущем.</dd>
 <dd lang="de">Wir bieten keine offizielle Version von MAPS.ME an. Zum aktuellen Zeitpunkt entwickeln
 wir keine Desktop-Version. Bitte fragen Sie zu einem späteren Zeitpunkt noch einmal nach.</dd>
 <dd lang="es">No tenemos una versión oficial de MAPS.ME para ordenador. De momento, no tenemos
