--- a/data/faq.html
+++ b/data/faq.html
@@ -2026,22 +2026,22 @@ envoyer nous :</p>
 provider/router settings. Please try again later or use a different Wi-Fi access point.
 In addition, make sure, that you have enough free space to download maps.</p>
 
-<p>If you have Android 6 or higher, please make sure that you granted storage permission for 
+<p>If you have Android 6 or higher, please make sure that you have granted storage permission for 
 MAPS.ME (usually, it enabled by default) in your device settings – Apps – MAPS.ME – Permissions – 
 Storage.</p>
 
 <p>If you have a slow internet connection, you can
 <a href="http://direct.mapswithme.com/direct/latest/" class="link">download maps</a>
 directly via PC and then transfer them to the MAPS.ME folder on your device. On Android maps
-(.mwm files) are stored at MapsWithMe folder. On iOS, you need to connect your device to
+(.mwm files) are stored in MapsWithMe folder. On iOS, you need to connect your device to
 a computer and copy maps via iTunes (select your device, then Apps – scroll down the page, select
 MAPS.ME and copy maps to Documents section). Don’t forget to restart your device. Please note,
 that even the latest maps will be marked as outdated if you download them via PC.</p></dd>
 
 <dd lang="ru"><p>Причиной может быть временная проблема с сетью, либо специфические настройки
-интернет-провайдера<sup><a href="#rlink">[*]</a></sup> или роутера. Пожалуйста, попробуйте еще раз 
-через некоторое время, или подключитесь к другой точке Wi-Fi. Дополнительно, убедитесь, что на 
-устройстве достаточно свободного места для загрузки и хранения карт.</p>
+интернет-провайдера<sup><a href="#rlink">[*]</a></sup> или роутера. Пожалуйста, убедитесь, что на 
+устройстве достаточно свободного места для загрузки и хранения карт, попробуйте еще раз 
+через некоторое время, или подключитесь к другой точке Wi-Fi.</p>
 
 <p>Если у вас Android 6 или новее, пожалуйста, убедитесь, что приложению разрешен доступ к памяти 
 устройства, откройте настройки Android – Приложения – Все – MAPS.ME – Разрешения – Память.</p>
